Added a search for and a rest upload of new and modified entities. Added a UI for upload of local entities to the entity server.